# csvpretty

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: main.rs
tests/: line_numbers_tests.rs  terminal_width_tests.rs  wrap_mode_tests.rs
tests/fixtures/: long_text.csv  many_rows.csv
tests/helpers/: mod.rs
tests/snapshots/: line_numbers_tests__line_numbers_many_rows.snap  line_numbers_tests__line_numbers_with_char_wrap.snap  line_numbers_tests__line_numbers_with_none_wrap.snap  line_numbers_tests__line_numbers_with_word_wrap.snap  line_numbers_tests__no_line_numbers_many_rows.snap  line_numbers_tests__with_line_numbers_short_flag.snap  line_numbers_tests__without_line_numbers.snap  terminal_width_tests__long_text_narrow_80_cols.snap  terminal_width_tests__long_text_wide_120_cols.snap  terminal_width_tests__many_rows_120_cols.snap  terminal_width_tests__many_rows_80_cols.snap  terminal_width_tests__narrow_40_cols_word_wrap.snap  terminal_width_tests__standard_80_cols_word_wrap.snap  terminal_width_tests__very_wide_200_cols_word_wrap.snap  terminal_width_tests__wide_120_cols_word_wrap.snap  wrap_mode_tests__char_wrap_mode.snap  wrap_mode_tests__none_wrap_mode.snap  wrap_mode_tests__none_wrap_simple_data.snap  wrap_mode_tests__word_wrap_mode.snap  wrap_mode_tests__word_wrap_simple_data.snap
