[package]
name = "csvpretty"
version = "0.1.0"
edition = "2024"
authors = ["Luke Frisken <l.frisken@gmail.com>"]
description = "A command-line tool that formats CSV input into tables with Unicode box-drawing characters"
license = "MIT"
repository = "https://github.com/kellpossible/csvpretty"
readme = "README.md"
keywords = ["csv", "cli", "table", "formatting", "pretty-print"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
csv = "1.4"
unicode-width = "0.2"
terminal_size = "0.4"
clap = { version = "4.5", features = ["derive"] }
owo-colors = "4.2"
terminal-colorsaurus = "1.0"

[dev-dependencies]
insta = "1.43"
portable-pty = "0.9"
